# matrix-cgpt

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
my_bot/: __init__.py  ai_types.py  main.py  matrix_helper.py  openai_helper.py
